# WPC

./: .gitignore  Cargo.toml  README.md  WPC_Installer.iss
crates/winpc-agent/: Cargo.toml
crates/winpc-agent/src/: command_pipe.rs  main.rs
crates/winpc-core/: Cargo.toml
crates/winpc-core/src/: config.rs  error.rs  lib.rs  model.rs  security.rs
crates/winpc-service/: Cargo.toml
crates/winpc-service/src/: html.rs  ipc.rs  lib.rs  main.rs  platform.rs  state.rs
scripts/: configure-all-users.ps1  configure-child-user.ps1  configure-tailscale.ps1  install-agent.ps1  install-service.ps1  stop-service.ps1
target-agent-check/: .rustc_info.json
target-agent-check/release/: winpc-agent.d
target-agent-check/release/.fingerprint/adler2-f0559e8fe97855f1/: lib-adler2  lib-adler2.json
target-agent-check/release/.fingerprint/argon2-944bc23b61296e5f/: lib-argon2  lib-argon2.json
target-agent-check/release/.fingerprint/autocfg-c24aad6555deda93/: lib-autocfg  lib-autocfg.json
target-agent-check/release/.fingerprint/base64-61424b2ce6580a1d/: lib-base64  lib-base64.json
target-agent-check/release/.fingerprint/base64ct-0e72220da0ee5a80/: lib-base64ct  lib-base64ct.json
target-agent-check/release/.fingerprint/bitflags-f0be54c2f61f39ca/: lib-bitflags  lib-bitflags.json
target-agent-check/release/.fingerprint/blake2-9fae2533df3cb69d/: lib-blake2  lib-blake2.json
target-agent-check/release/.fingerprint/block-buffer-e6b616a759731dce/: lib-block_buffer  lib-block_buffer.json
target-agent-check/release/.fingerprint/bytes-5f68cf0f8d18450f/: lib-bytes  lib-bytes.json
target-agent-check/release/.fingerprint/cfg-if-e3bee5d3fe60db64/: lib-cfg_if  lib-cfg_if.json
target-agent-check/release/.fingerprint/chrono-b02a80c768aa9d37/: lib-chrono  lib-chrono.json
target-agent-check/release/.fingerprint/cpufeatures-cfd97e7f93beea42/: lib-cpufeatures  lib-cpufeatures.json
target-agent-check/release/.fingerprint/crc32fast-072c8fb8ca2fc116/: lib-crc32fast  lib-crc32fast.json
target-agent-check/release/.fingerprint/crc32fast-1fbb95370908eaca/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-agent-check/release/.fingerprint/crc32fast-296692dd96b7fee2/: build-script-build-script-build  build-script-build-script-build.json
target-agent-check/release/.fingerprint/crypto-common-16cee220f5d3c150/: lib-crypto_common  lib-crypto_common.json
target-agent-check/release/.fingerprint/digest-de9b2ec2a932ee2b/: lib-digest  lib-digest.json
target-agent-check/release/.fingerprint/fdeflate-fe13aade17a48b30/: lib-fdeflate  lib-fdeflate.json
target-agent-check/release/.fingerprint/flate2-8a5b7272e74b966b/: lib-flate2  lib-flate2.json
target-agent-check/release/.fingerprint/generic-array-2604a5bfb7f5ed46/: lib-generic_array  lib-generic_array.json
target-agent-check/release/.fingerprint/generic-array-4d86e1e403952a5b/: build-script-build-script-build  build-script-build-script-build.json
target-agent-check/release/.fingerprint/generic-array-86fa4627dccab523/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-agent-check/release/.fingerprint/getrandom-57319a4402094459/: lib-getrandom  lib-getrandom.json
tmp/snapshot-test/: config.json  latest-snapshot.ps1
(+135 files in other folders)
