[workspace]
members = [
    "crates/winpc-core",
    "crates/winpc-service",
    "crates/winpc-agent",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["clock", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

