[package]
name = "winpc-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
png = "0.17.16"
serde_json.workspace = true
tokio.workspace = true
winpc-core = { path = "../winpc-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }
