[package]
name = "winpc-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3.18.0"
