[package]
name = "winpc-service"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
winpc-core = { path = "../winpc-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.8.0"

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.2", features = ["util"] }
tempfile = "3.18.0"
